--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Undefined Games</title>
   </head>
   <body>
-    <p>A loosly defined games making group</p>
+    <p>Holding page</p>
   </body>
 </html>
